INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src
  ${VLE_INCLUDE_DIRS}
  ${Boost_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${VLE_LIBRARY_DIRS}
  ${Boost_LIBRARY_DIRS})

ADD_LIBRARY(testError SHARED testError.cpp)

TARGET_LINK_LIBRARIES(testError
  ${VLE_LIBRARIES}
  ${Boost_LIBRARIES})

INSTALL(TARGETS testError
  RUNTIME DESTINATION plugins/simulator
  LIBRARY DESTINATION plugins/simulator
  ARCHIVE DESTINATION plugins/simulator)


ADD_LIBRARY(Perturb SHARED Perturb.cpp)

TARGET_LINK_LIBRARIES(Perturb
  ${VLE_LIBRARIES}
  ${Boost_LIBRARIES})

INSTALL(TARGETS Perturb
  RUNTIME DESTINATION plugins/simulator
  LIBRARY DESTINATION plugins/simulator
  ARCHIVE DESTINATION plugins/simulator)
   